--- a/google_pay/pubspec.yaml
+++ b/google_pay/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  anim_search_bar: ^2.0.3
+  dotted_border: ^2.0.0
+  image_picker: ^1.1.2
+  permission_handler: ^12.0.1
+  fluttertoast: ^8.2.12
+  animated_text_kit: ^4.2.3
 
 dev_dependencies:
   flutter_test:
@@ -58,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+   - assets/image/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
